--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>Hatchbuck API Example</h1>
 	
 		<!-- HB API Form -->
-		<form action="hb.php" method="post" id="api_form">
+		<form action="api_code.php" method="post" id="api_form">
 		
 			<ul>
 				<li><input name="firstName" placeholder="First Name" /></li>
